# BresenhC

./: .gitignore  BresenhC.vcxproj  BresenhC.vcxproj.filters  CMakeLists.txt  CRenderer.sln  CRenderer.vcxproj  CRenderer.vcxproj.filters  README.md  main.c
CRenderer/: CRenderer.vcxproj  CRenderer.vcxproj.filters  display.h  main.c  math.c  vector.c
include/: brh_camera.h  brh_clipping.h  brh_display.h  brh_face.h  brh_geometry.h  brh_light.h  brh_matrix.h  brh_mesh.h  brh_mesh_manager.h  brh_renderable.h  brh_scene.h  brh_texture.h  brh_texture_manager.h  brh_triangle.h  brh_vector.h  brh_vector2.h  brh_vector3.h  display.h  math_utils.h  mesh.h  model_loader.h  obj_loader.h  triangle.h  vector.h
src/: array.c  brh_camera.c  brh_clipping.c  brh_display.c  brh_face.c  brh_geometry.c  brh_light.c  brh_matrix.c  brh_mesh.c  brh_mesh_manager.c  brh_renderable.c  brh_scene.c  brh_texture.c  brh_texture_manager.c  brh_triangle.c  brh_vector.c  brh_vector2.c  brh_vector3.c  display.c  main.c  math_utils.c  mesh.c  model_loader.c  obj_loader.c  upng.c  vector.c
